# axiom

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
src/core/: database.rs  events.rs  mod.rs
src/features/: mod.rs
src/features/dungeon/: models.rs
src/features/surveillance/: scanner.rs
src/services/: image_gen.rs  mod.rs
web/: .cta.json  package.json  vite.config.ts
web/public/: manifest.json
web/src/: router.tsx  styles.css
web/src/components/: Header.tsx
web/src/routes/: __root.tsx  index.tsx
