[package]
name = "axiom"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"

twilight-model = "0.17.1"
twilight-http = "0.17.1"
twilight-gateway = "0.17.1"
twilight-util = { version = "0.17.0", features = ["builder"] }
twilight-standby = "0.17.0"

rustls = { version = "0.23.35", default-features = false, features = ["ring", "logging", "tls12"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
mongodb = "3.4.1"

dotenvy = "0.15.7"
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
regex = "1.12.2"

resvg = "0.45.1"
tiny-skia = "0.11.4"
fontdb = "0.23.0"